Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/varargs/6313164/T7175433.out
T7175433.java:24:12: compiler.err.prob.found.req: (compiler.misc.inaccessible.varargs.type: Bar.Foo, kindname.class, T7175433)
1 error
